--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -85,14 +85,14 @@ if(msgType=='error-msg'){
 }
 			
 jQuery( document ).ready( function($){
-	if(hdata){
+/*	if(hdata){
 		jQuery.confirm({
 			title: msgTitle,
 			confirmButtonClass: 'btn-info',
 			content: hdata, // You can also LOAD the html data using LOAD FROM URL feature,
 			
 		});
-	}
+	}*/
 	
 	jQuery('#tools-button').find('li').find('a').click(function(){
 	setTimeout(function(){
