creo bulk orders

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4541,7 +4541,125 @@ textarea {
     font:bold 17px/22px "Roboto Condensed",Helvetica,Arial,sans-serif;
 }
 .col-about-area p{margin: 0;}
-
+/*New CMS Pages*/
+.pink:hover,
+.pink{color: #f16b7a;}
+.faq-area.bulk-area p{
+    margin:0 0 10px;
+    line-height: 20px;
+}
+.bulk-order-form{
+    display: block;
+    width: 100%;
+    padding: 30px 0;
+}
+.bulk-order-form h5{
+    margin: 0 0 12px;
+}
+.bulk-order-form .form-row{
+    overflow: hidden;
+    margin: 0 0 10px;
+    width: 101%;
+}
+.bulk-order-form .form-col{
+    width: 24%;
+    margin: 0 1% 0 0;
+    float: left;
+}
+.bulk-order-form label{
+    display: block;
+    padding: 0;
+    margin: 0 0 3px;
+    text-transform: capitalize;
+    color: #000;
+    font:12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.bulk-order-form label span{
+    display: block;
+    font-size: 10px;
+    text-transform: none;
+}
+.bulk-order-form input[type="text"],
+.bulk-order-form input.email{margin: 0;}
+/* select */
+.form-select-col{
+    float: left;
+    width: 176px;
+    margin: 0 12px 0 0;
+}
+.bulk-order-form .fake-select{
+    position:relative;
+    display:block;
+}
+.bulk-order-form select::-ms-expand {display: none;}
+.bulk-order-form select{
+    display:inline-block;
+    border:1px solid #e4e4e4;
+    padding:2px 3px 2px 5px;
+    margin:0;
+    font:inherit;
+    outline:none;
+    line-height:1.2;
+    background:#fff;
+    -webkit-appearance:none;
+    -webkit-border-radius:6px;
+    -moz-border-radius:6px;
+    appearance:none;
+    width:176px;
+    position: relative;
+    left: 0;
+    bottom: 0;
+    height: 18px;
+    font-size: 10px;
+    line-height: 12px;
+    text-transform: uppercase;
+    color: #949494;
+}
+.bulk-order-form .fake-select:before{
+    content:"";
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    background: url(images/bg-select.jpg) no-repeat;
+    background-size: 100% 100%;
+    height: 18px;
+    width: 22px;
+    pointer-events:none;
+    z-index: 1;
+}
+.bulk-order-form .form-textarea-col{
+    width: 430px;
+    overflow: hidden;
+}
+.bulk-order-form textarea{
+    height: 70px;
+    background: #fff;
+    border: 1px solid #ddd;
+    display: block;
+    float: left;
+    line-height: 20px;
+    margin: 0 0 10px;
+    padding: 4px 10px;
+    text-align: left;
+    width: 100%;
+}
+.bulk-order-form input[type="submit"]{
+    float: right;
+    background: #000;
+    border: none;
+    width: 92px;
+    height: 22px;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    font:12px/22px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.bulk-order-form input[type="submit"]:hover{
+    background: #ef4f61;
+    color: #fff;
+    border: none;
+}
 
 
 
