--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4582,7 +4582,7 @@ textarea {
 .bulk-order-form input[type="text"],
 .bulk-order-form input.email{margin: 0;}
 /* select */
-.form-select-col{
+.bulk-order-form .form-select-col{
     float: left;
     width: 176px;
     margin: 0 12px 0 0;
@@ -4671,6 +4671,133 @@ textarea {
     color: #fff;
     border: none;
 }
+.cs-text-area{
+    overflow: hidden;
+    border-bottom: 1px solid #d4d4d4;
+    padding: 0 0 12px;
+    color: #000;
+    font:12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.cs-text-area p{margin: 0 0 10px;}
+.cs-text-area h5{
+    margin: 0;
+    padding: 10px 0 0;
+}
+.cs-text-area .pink-border{
+    border: 1px solid #f27281;
+    display: block;
+    padding: 3px 12px;
+    margin: 0 0 15px;
+    color: #000;
+    font:bold 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.cs-form{
+    display: block;
+    width: 100%;
+    padding: 30px 0;
+}
+.cs-form .form-row{
+    overflow: hidden;
+    margin: 0 0 10px;
+    width: 101%;
+}
+.cs-form .form-col{
+    width: 29%;
+    margin: 0 1% 0 0;
+    float: left;
+}
+.cs-form label{
+    display: block;
+    padding: 0;
+    margin: 0 0 3px;
+    text-transform: capitalize;
+    color: #000;
+    font:12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+/* select */
+.cs-form .form-select-col{
+    float: left;
+    width: 176px;
+    margin: 0 12px 0 0;
+}
+.cs-form .fake-select{
+    position:relative;
+    display:inline-block;
+}
+.cs-form select::-ms-expand {display: none;}
+.cs-form select{
+    display:inline-block;
+    border:1px solid #e4e4e4;
+    padding:2px 3px 2px 5px;
+    margin:0;
+    font:inherit;
+    outline:none;
+    background:#fff;
+    -webkit-appearance:none;
+    -webkit-border-radius:6px;
+    -moz-border-radius:6px;
+    appearance:none;
+    width:448px;
+    position: relative;
+    left: 0 !important;
+    bottom: 0 !important;
+    height: 18px !important;
+    font-size: 10px;
+    line-height: 12px;
+    text-transform: uppercase;
+    color: #949494;
+    border-radius: 0;
+}
+.cs-form .fake-select:before{
+    content:"";
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    background: url(images/bg-select.jpg) no-repeat;
+    background-size: 100% 100%;
+    height: 18px;
+    width: 22px;
+    pointer-events:none;
+    z-index: 1;
+}
+.cs-form .form-textarea-col{
+    width: 40%;
+    overflow: hidden;
+}
+.cs-form textarea{
+    height: 94px;
+    background: #fff;
+    border: 1px solid #ddd;
+    display: block;
+    float: left;
+    line-height: 20px;
+    margin: 0 0 10px;
+    padding: 4px 10px;
+    text-align: left;
+    width: 100%;
+}
+.cs-form input[type="submit"]{
+    float: right;
+    background: #000;
+    border: none;
+    width: 92px;
+    height: 22px;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    font:12px/22px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.cs-form input[type="submit"]:hover{
+    background: #ef4f61;
+    color: #fff;
+    border: none;
+}
+.cs-form .ps{
+    display: inline-block;
+    vertical-align: top;
+    font:10px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
 
 
 
@@ -4729,6 +4856,8 @@ textarea {
     .two-column-category .category-title span,
     .two-column-category img{height: 476px;}
     .featured-items .btn-holder button{width: 76%;}
+    /*New CMS Pages*/
+    .cs-form select{width: 368px;}
 }
 @media only screen and (max-width: 991px) {
     #wrapper > .container{padding: 0 15px;}
@@ -4812,6 +4941,8 @@ textarea {
     }
     #featured-product-list-table2 td{float: left;}
     .featured-items .btn-holder {display: block;}
+    /*New CMS Pages*/
+    .cs-form select{width: 290px;}
 }
 @media only screen and (max-width: 767px) {
     body { min-width: 768px; }
