creo point 2 resolved

--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -85,7 +85,7 @@ if(msgType=='error-msg'){
 }
 			
 jQuery( document ).ready( function($){
-/*	if(hdata){
+	if(hdata){
 
 		jQuery.confirm({
 			title: msgTitle,
@@ -93,7 +93,7 @@ jQuery( document ).ready( function($){
 			content: hdata, // You can also LOAD the html data using LOAD FROM URL feature,
 			
 		});
-	}*/
+	}
 	
 	jQuery('#tools-button').find('li').find('a').click(function(){
 	setTimeout(function(){
