track order modified

--- a/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
+++ b/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
@@ -9,8 +9,8 @@
 <div class="row">
 
 <div class="faq-area bulk-area col col-lg-12 col-md-12 col-sm-12 col-xs-12">
- 
-        <form name="track_order" id="track_order" action="" method="post" onsubmit="sendAjax('track_order','<?php  echo Mage::getUrl('*/*/track',array('_secure'=>true));?>'); return false;">    
+
+        <form name="track_order" id="track_order" action="" method="post" onsubmit="sendAjax('track_order','<?php  echo Mage::getUrl('*/*/track',array('_secure'=>true));?>');">    
         
         <div class="row" id="secondform">
   <div class="col-md-6">
