--- a/app/design/frontend/creo/default/template/catalog/category/categorylist.phtml
+++ b/app/design/frontend/creo/default/template/catalog/category/categorylist.phtml
@@ -1,7 +1,9 @@
 <div class="category-products">
 <ul class="products-grid">
 <?php
+$baseurl = Mage::getBaseUrl();
 $_categories=$this->getCurrentChildCategories();
+//print_r($_categories);
 if($_categories->count()):
 $categorycount = 0;
 foreach ($_categories as $_category):
@@ -10,6 +12,12 @@ $cur_category=Mage::getModel('catalog/category')->load($_category->getId());
 $layer = Mage::getSingleton('catalog/layer');
 $layer->setCurrentCategory($cur_category);
 $catName = $this->getCurrentCategory()->getName();
+
+
+$Category = $layer->getCurrentCategory();
+$currentCatId= $Category->getId(); //will give current categeory id
+
+
 if ($categorycount == 0){
 $class = "first";
 }
@@ -20,10 +28,25 @@ else{
 $class = "";
 }
 ?>
+<?php if($currentCatId == 52) { ?>
+<li class="item <?=$class . " category".$currentCatId ?>">
+<a href="javascript:void(0)" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><img src="<?php echo $_category->getImageUrl() ?>" width="100" alt="<?php echo $this->htmlEscape($_category->getName()) ?>" /></a>
+<h2><a href="javascript:void(0)" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->htmlEscape($_category->getName()) ?></a></h2>
+</li>
+<?php } elseif ($currentCatId == 53) {?>
+
+<li class="item <?=$class?>"> 
+<a href="<?php echo $baseurl."bulk-orders/" ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><img src="<?php echo $_category->getImageUrl() ?>" width="100" alt="<?php echo $this->htmlEscape($_category->getName()) ?>" /></a>
+<h2><a href="<?php echo $baseurl."bulk-orders/" ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->htmlEscape($_category->getName()) ?></a></h2>
+</li>
+
+<?php } else { ?>
 <li class="item <?=$class?>">
 <a href="<?php echo $_category->getURL() ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><img src="<?php echo $_category->getImageUrl() ?>" width="100" alt="<?php echo $this->htmlEscape($_category->getName()) ?>" /></a>
 <h2><a href="<?php echo $_category->getURL() ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->htmlEscape($_category->getName()) ?></a></h2>
 </li>
+<?php } ?>
+
 <?php
 endif;
 if($categorycount == 3){
