--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1161,3 +1161,7 @@
 #payment_form_creditcardpci #creditcardnumbercn, #payment_form_creditcardpci #creditcardpci_cc_type_cvv_div { margin: 0;}
 #creditcardNamecn { margin: 12px 0 0 0;}
 #payment_form_creditcardpci  .validation-advice { margin: 0;}
+
+.categorypath-create-phone-covers-html .get_photo_upload, .categorypath-create-notebooks-html .get_photo_upload,
+.categorypath-create-caps-143-html .get_photo_upload, categorypath-create-corporate-orders-html .get_photo_upload
+{ display: none;}
