clear all filter fixed

--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -60,7 +60,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                         <?php endforeach; ?>
 
                         <?php //if ($state[1] AND $this->bNeedClearAll())://disabled clear all option ?>
-                        <div class="actions fme_layered_clear_all"><a class="fme_layered_clearall" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Clear All') ?></a></div>            
+                        <div class="actions fme_layered_clear_all" id="fme_layered_clear_all"><a class="fme_layered_clearall" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Clear All') ?></a></div>            
                         <?php //endif ?>
 
                     </dl>
@@ -78,6 +78,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
     <script>
         document.getElementById("fme_layered_styles").style.display = 'none';
         document.getElementById("styles_label").style.display = 'none';
+		document.getElementById("fme_layered_clear_all").style.display = 'none';
     </script>
     <?php
 }
