edit and remove linkes are added on cart page

--- a/app/design/frontend/creo/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart/item/default.phtml
@@ -64,7 +64,8 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
                <!-- <li>-->
                     <a href="<?php echo $this->getConfigureUrl() ?>" title="<?php echo $this->__('Edit item parameters') ?>"><?php echo $this->__('Edit') ?></a>
                <!-- </li>-->
-            <?php endif ?><a href="<?php echo $this->getDeleteUrl() ?>" title="<?php echo $this->__('Remove Item') ?>" class="btn-remove btn-remove2"><?php echo $this->__('Remove Item') ?></a>
+            <?php endif ?><a onclick="return jQuery.confirm({title: 'Warning',confirmButtonClass: 'btn-info',content: '<?php echo $this->__('Are you sure to remove this item?') ?>',confirm: function(){window.location.href='<?php echo $this->getDeleteUrl() ?>';}});
+		" href="javascript:;" title="<?php echo $this->__('Remove Item') ?>" class="btn-remove btn-remove2"><?php echo $this->__('Remove Item') ?></a>
   <?php /*?>      
 
         <div class="product-cart-sku">
