--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -74,7 +74,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
         <div class="fme_loading_filters" style="display:none"></div>
     </div>
 <?php endif; ?>
-<?php if ($current_category_id != '17') { ?>
+<?php if ($current_category_id != '17' && $current_category_id != '59') { ?>
     <script>
         document.getElementById("fme_layered_styles").style.display = 'none';
         document.getElementById("styles_label").style.display = 'none';
