--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -60,7 +60,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                         <?php endforeach; ?>
 
                         <?php //if ($state[1] AND $this->bNeedClearAll())://disabled clear all option ?>
-                        <div class="actions fme_layered_clear_all" id="fme_layered_clear_all"><a class="fme_layered_clearall" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Clear All') ?></a></div>            
+                        <div class="actions fme_layered_clear_all" id="fme_layered_clear_all_btn"><a class="fme_layered_clearall" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Clear All') ?></a></div>            
                         <?php //endif ?>
 
                     </dl>
@@ -74,11 +74,11 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
         <div class="fme_loading_filters" style="display:none"></div>
     </div>
 <?php endif; ?>
-<?php if ($current_category_id != '17' && $current_category_id != '59') { ?>
+<?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?>
     <script>
         document.getElementById("fme_layered_styles").style.display = 'none';
         document.getElementById("styles_label").style.display = 'none';
-		document.getElementById("fme_layered_clear_all").style.display = 'none';
+		document.getElementById("fme_layered_clear_all_btn").style.display = 'none';
     </script>
     <?php
 }
