Validation error messages throughtout the site.

--- a/skin/frontend/creo/default/css/custom.sami.css
+++ b/skin/frontend/creo/default/css/custom.sami.css
@@ -648,3 +648,8 @@ div.fme-filter a.fme_layered_attribute {
     max-height: 110px;
     width: auto;
 }
+
+.fix-error .validation-advice {
+	width:auto; 
+	margin: 0;
+}
