--- a/app/design/frontend/creo/default/template/payment/form/ccsave.phtml
+++ b/app/design/frontend/creo/default/template/payment/form/ccsave.phtml
@@ -50,12 +50,12 @@
     <div class="col-sm-4">
       <div class="credit-card clearfix">
         <div class="card-sctn-black"></div>
-        <div class="form-group col-xs-12 clearfix">
+        <div class="form-group col-xs-12 clearfix fix-error">
           <input type="text" pattern="\d*" id="<?php echo $_code ?>_cc_number" name="payment[cc_number]" title="<?php echo $this->__('Credit Card Number') ?>" class="input-text validate-cc-number validate-cc-type cc-no" value="" />
           <!--<input type="text" placeholder="ccv" class="ccv">-->
            <input type="text"  placeholder="ccv" pattern="\d*" title="<?php echo $this->__('Card Verification Number') ?>" class="input-text cvv required-entry validate-cc-cvn ccv" id="<?php echo $_code ?>_cc_cid" name="payment[cc_cid]" value="" />
         </div>
-        <div class="form-group col-xs-12 clearfix centered-card" style="margin-top:5px; margin-bottom:49px;">
+        <div class="form-group col-xs-12 clearfix centered-card fix-error" style="margin-top:5px; margin-bottom:49px;">
           <div class="pull-left">
             <label for="<?php echo $_code ?>_expiration" class="required"><em>*</em><?php echo $this->__('Expiration Date') ?></label>
           </div>
