cart page icosn and update issue

--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -286,7 +286,7 @@ endforeach;
 
     </div>
 </li>
-<li <?php if (strpos(Mage::helper('core/url')->getCurrentUrl(), '/caps/') == true) {
+<li <?php if (strpos(Mage::helper('core/url')->getCurrentUrl(), '/caps-133/') == true) {
                     echo'class="active"';
                 } ?>><a href="javascript:void(0)">CAPS</a>
     <div class="drop">
