--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1178,3 +1178,6 @@
     padding: 10px 0;
     text-transform: uppercase;
     width: 100%;}
+.pdploading { background: none !important;}
+.pdploading span { background: none !important; }
+.pdploading span::after { background: none !important; }
