--- a/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
+++ b/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
@@ -11,7 +11,7 @@
 
 <div class="faq-area bulk-area col col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-        <form name="track_order" id="track_order" action="" method="post" onsubmit="sendAjax('track_order','<?php  //echo Mage::getUrl('*/*/track',array('_secure'=>true));?>https://creoroom.com/creo/trackorder/index/track/'); return false;">    
+        <form name="track_order" id="track_order" action="" method="post" onsubmit="sendAjax('track_order','<?php  //echo Mage::getUrl('*/*/track',array('_secure'=>true));?>/creo/trackorder/index/track/'); return false;">    
         
         <div class="row" id="secondform">
   <div class="col-md-6">
