--- a/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
+++ b/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
@@ -1,5 +1,7 @@
 <?php
     if(Mage::getStoreConfig('trackorder/trackorder_general/enabled')):
+	$customerEmail = Mage::getSingleton('customer/session')->getCustomer()->getEmail();
+	
     ?>
   <div class="row">
 <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -23,12 +25,19 @@
     </div>
     
     <div class="col-md-6">
+    <?php if($customerEmail==''){?>
   <div class="form-group">
     <label for="email_address" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
    
    <input type="text" name="email" id="email_address" value="" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
   </div>
-
+  <?php
+	}else{
+  ?>
+ <input type="hidden" name="email" id="email_address" value="<?php echo $customerEmail;?>" />
+ <?php
+	}
+ ?>
   <button type="submit" class="btn btn-default" title="<?php echo $this->__('Track Order') ?>" name="track" id="track"><span><span><?php echo $this->__('Track Order') ?></span></span></button>
 </div>
 </div>
