--- a/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
+++ b/app/design/frontend/creo/default/template/trackorder/trackorder.phtml
@@ -8,37 +8,40 @@
 <h2><?php echo $this->__('Track Your Order ') ?></h2>
 </div>
 </div>
-<div id="oderinfo" class="order-info-message"></div>
 <div class="row">
 
 <div class="faq-area bulk-area col col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
+        <div id="oderinfo" class="order-info-message"></div>
         <form name="track_order" id="track_order" action="" method="post" onsubmit="sendAjax('track_order','<?php  //echo Mage::getUrl('*/*/track',array('_secure'=>true));?>/creo/trackorder/index/track/'); return false;">    
         
         <div class="row" id="secondform">
-  <div class="col-md-6">
+  <div class="col-md-5">
   <div class="form-group">
   
-  <label for="order_id" class="required"><em>*</em><?php echo $this->__('Order Number') ?></label>
+  <label for="order_id" class="required"><?php echo $this->__('*Order Number') ?></label>
     <input type="text" name="order_id" id="order_id" value="" title="" class="input-text required-entry" />
     </div>
     </div>
-    
-    <div class="col-md-6">
     <?php if($customerEmail==''){?>
+    <div class="col-md-5">
+    
   <div class="form-group">
-    <label for="email_address" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
+    <label for="email_address" class="required"><?php echo $this->__('*Email Address') ?></label>
    
    <input type="text" name="email" id="email_address" value="" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
   </div>
-  <?php
-	}else{
+  
+  
+</div>
+<?php
+    }else{
   ?>
  <input type="hidden" name="email" id="email_address" value="<?php echo $customerEmail;?>" />
  <?php
-	}
+    }
  ?>
-  <button type="submit" class="btn btn-default" title="<?php echo $this->__('Track Order') ?>" name="track" id="track"><span><span><?php echo $this->__('Track Order') ?></span></span></button>
+<div class="col-md-2 col-xs-3">
+<button type="submit" class="" title="<?php echo $this->__('Track Order') ?>" name="track" id="track"><?php echo $this->__('Track Order') ?></button>
 </div>
 </div>
         
