cart page fixed

--- a/app/design/frontend/creo/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart/item/default.phtml
@@ -235,6 +235,7 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
            // echo $select_array[$_item->getSku()];
             $options = $attribute->getSource()->getAllOptions(false);
             $txt = "";
+			if($select_array[$_item->getSku()]){
             foreach($options as $option)
             {
                 if(strtolower($select_array[$_item->getSku()]) == strtolower($option['label']))
@@ -248,6 +249,9 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
                     }
                // echo $option['label'].",";
             }
+			}else{
+				echo "N/A";	
+			}
 
         }
         echo implode(' ',$txt);
